--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "simple-wasi-zstd",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Simple zstd library for Node.js / Deno / Browser.",
   "module": "libzstd.js",
+  "types": "libzstd.d.ts",
   "type": "module",
   "directories": {
     "test": "tests"
