--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "make test",
+    "test": "make tests",
     "prepare": "make"
   },
   "repository": {
